--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,54 @@
-<h2>Login</h2>
-<form>
-  <input type="text" name="username" [(ngModel)]="username">
-  <input type="password" name="password" [(ngModel)]="password">
-  <button type="button" (click)="login()">Login</button>
-</form>
-<pre>{{api.accessToken}}</pre>
+<mat-card *ngIf="!api.loggedIn" class="login-card">
+
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Username</mat-label>
+          <input matInput name="username" [(ngModel)]="username">
+          <mat-icon matSuffix>account_circle</mat-icon>
+          <mat-hint>Your email</mat-hint>
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" name="password" [(ngModel)]="password">
+          <mat-icon matSuffix>vpn_key</mat-icon>
+          <mat-hint>Enter your password</mat-hint>
+        </mat-form-field>
+      </p>
+
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-button (click)="login()">Login</button>
+  </mat-card-actions>
+
+</mat-card>
+
+
+<mat-card *ngIf="api.loggedIn" class="login-card">
+
+    <mat-card-header>
+      <mat-card-title>Your Profile</mat-card-title>
+    </mat-card-header>
+  
+    <mat-card-content>
+
+        <img src="{{api.userProfile?.picture}}" class="avatar">
+        <p>{{api.userProfile?.fullName}}</p>
+        <p>{{api.userProfile?.email}}</p>
+  
+    </mat-card-content>
+  
+    <mat-card-actions>
+      <button mat-button (click)="api.logOut()">Logout</button>
+    </mat-card-actions>
+  
+  </mat-card>
