--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,76 @@
-<h2>Projects</h2>
+<div class="container">
+
+    <h1>Projects</h1>
+
+    <div [fxLayout]="'row wrap'" fxLayoutGap="30px" class="container">
+
+      <mat-card fxFlex class="" *ngFor="let project of projects">
+    
+          <mat-card-header>
+              <div mat-card-avatar [style.background-image]="'url(' + project?.owner?.avatarSrc + ')'" class="project-header-avatar">
+              </div>
+              <mat-card-title [routerLink]="['/projects', project.id]">
+                {{project?.name}}
+              </mat-card-title>
+              <mat-card-subtitle>{{project?.owner?.fullName}}</mat-card-subtitle>
+          </mat-card-header>
+    
+          <img mat-card-image [routerLink]="['/projects', project.id]" src="{{project?.coverImageSrc}}" alt="">
+    
+          <mat-card-content>
+              <p>{{project?.requestedAmount}}&euro;</p>
+              <p>{{ project?.fundedPercentage}}% founded</p>
+              <p>
+                  {{project?.description | truncate:[35]}}
+              </p>
+          </mat-card-content>
+    
+          <mat-card-actions align="end">
+              <button mat-button [routerLink]="['/projects', project.id]">Learn More</button>
+          </mat-card-actions>
+    
+      </mat-card>
+    
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <mat-card class="example-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+        <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+    </mat-card-actions>
+</mat-card> -->
+
+
+
+
+<!-- <h2>Projects</h2>
 
 <article *ngFor="let project of projects">
   
@@ -11,5 +83,5 @@
   <p>{{project?.description | truncate:[35]}}</p>
 
   <br>
-</article>
+</article> -->
 
