--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -8,15 +8,11 @@
 
   <div class="mainNav">
     <a routerLink="/">CrowdLendingApp</a>
-    <!-- <a routerLink="/projects">Projects</a> -->
+    <a routerLink="/projects">projects</a>
   </div>
 
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-
-      <!-- <li>
-        <a [routerLink]="['/projects']">Projects</a>
-      </li> -->
 
       <li *ngIf="!api.loggedIn">
         <a [routerLink]="['/user']">Login</a>
