--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,19 +1,107 @@
-<h2>{{project?.name}}</h2>
-<h3>By {{project?.owner?.firstName}} {{project?.owner?.lastName}}</h3>
-<p>{{project?.description}}</p>
-<p>{{ project?.fundedPercentage}}% founded</p>
-<ul>
-  <li>Requested amount: {{project?.requestedAmount}}</li>
-  <li>Collected amount: {{project?.collectedAmount}}</li>
-</ul>
+<div class="container">
 
-<br>
-<h2>Invest in this project</h2>
-<div *ngIf="api.loggedIn">
-  <form>
-    Amount: <input type="number" name="amount" [(ngModel)]="amount">
-    <button type="button" (click)="invest()">Invest</button>
-    <p>{{resultMessage}}</p>
-  </form>
+    <h1>
+      <mat-icon routerLink="/projects" class="clickable">arrow_back</mat-icon>
+      {{project?.name}}
+    </h1>
+
+    <div [fxLayout]="'row wrap'" fxLayoutGap="30px">
+
+      <mat-card fxFlex class="project-card">
+
+          <mat-card-header>
+              <div mat-card-avatar [style.background-image]="'url(' + project?.owner?.avatarSrc + ')'"
+                  class="project-header-avatar">
+              </div>
+              <mat-card-title>{{project?.owner?.fullName}}</mat-card-title>
+              <mat-card-subtitle>is collecting money</mat-card-subtitle>
+          </mat-card-header>
+
+          <div class="cover" [style.background-image]="'url(' + project?.coverImageSrc + ')'">
+          </div>
+
+          <mat-card-content>
+              <mat-progress-bar mode="determinate" value="{{ project?.fundedPercentage}}"></mat-progress-bar>
+
+              <div id="textbox">
+                  <p class="alignleft">{{ project?.fundedPercentage}}% founded</p>
+                  <p class="alignright">{{project?.requestedAmount}}&euro;</p>
+                  <div style="clear: both;"></div>
+              </div>
+
+              <p>
+                  {{project?.description}}
+              </p>
+
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                  officia deserunt mollit anim id est laborum.
+              </p>
+
+              <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+                  totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
+                  dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                  sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam 
+                  est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius 
+                  modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, 
+                  quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi 
+                  consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae 
+                  consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+              </p>
+
+              <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
+                  atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique 
+                  sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum 
+                  facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil 
+                  impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor 
+                  repellendus. 
+              </p>
+
+          </mat-card-content>
+
+      </mat-card>
+
+
+
+      <mat-card fxFlex class="invest-card">
+
+          <mat-card-header>
+            <mat-card-title>Invest in the project</mat-card-title>
+          </mat-card-header>
+        
+          <mat-card-content *ngIf="api.loggedIn">
+        
+              <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Amount</mat-label>
+                  <input matInput type="number" name="amount" [(ngModel)]="amount">
+                  <mat-icon matSuffix>euro_symbol</mat-icon>
+                  <mat-hint>The amount to invest</mat-hint>
+                </mat-form-field>
+              </p>
+
+              <button mat-raised-button color="primary" (click)="invest()">
+                Invest
+              </button>
+
+              <p *ngIf="resultMessage != ''" class="result-message">
+                {{resultMessage}}
+              </p>
+        
+          </mat-card-content>
+
+          <mat-card-content *ngIf="!api.loggedIn">
+              Please log in to invest in the project.
+          </mat-card-content>
+        
+        
+        </mat-card>
+
+    </div>
+
 </div>
-<div *ngIf="!api.loggedIn">Please log in to invest in thus project</div>
