--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,15 @@ html, body {
     margin: 0;
     height: 100%;
 }
+
+.alignleft {
+	float: left;
+}
+
+.alignright {
+	float: right;
+}
+
+.clickable {
+    cursor: pointer;
+}
